snapshots/syntax/library/statements/lock/lock_at_module_level.snap
---
source: src/syntax/library/statements/lock.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: LockStatement
      children:
        - kind: LockKeyword
          text: Lock
        - kind: Whitespace
          text: " "
        - kind: Octothorpe
          text: "#"
        - kind: IntegerLiteral
          text: "1"
        - kind: Newline
          text: "\n"
