snapshots/syntax/library/statements/lock/lock_single_record.snap
---
source: src/syntax/library/statements/lock.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: LockStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: LockKeyword
                  text: Lock
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "5"
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
